# ia-00.1

./: .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  config.toml  pyproject.toml
backend/: main.py
backend/core/: brain.py  logger.py  toolbox.py
frontend/: index.html  script.js  style.css
tests/: test_toolbox.py
