[tool.poetry]
name = "interactive-smart-agent"
version = "0.1.0"
description = "An interactive agent that can think, act, and show its work."
authors = ["Jules"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
python-dotenv = "^1.0.0"
ollama = "^0.1.7"
playwright = "^1.42.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
